# tandem-python-template

./: README.md  cookiecutter.json  environment.yml  pyproject.toml  setup.cfg
hooks/: post_gen_project.py
{{cookiecutter._package_name}}/: README.md  environment.yml
{{cookiecutter._package_name}}/src/: main.py
{{cookiecutter.package_name}}/: README.md  setup.cfg
{{cookiecutter.package_name}}/src/: __init__.py  main.py
{{cookiecutter.project_name}}/: README.md  environment.yml  pyproject.toml
{{cookiecutter.project_name}}/src/: main.py
